test/input/negative/not_lambda.ls
This is just plain text
Not Lambda syntax at all
No braces, no equals, no keywords
